# titan-client

./: MODELING.md  README.md  STREAMING-GIF-ETC.md  build_swgclient_d.ps1  build_swgclient_r.ps1
.github/upgrades/scenarios/cppbuildtoolsupgrade_5b78de/: scenario.json
datasources/: README.md
datasources/ui/: ui_airspeeder_panel.inc  ui_cinematic_conversation.inc  ui_city_terrain_painter.inc  ui_decorator_camera_panel.inc  ui_gcw_information.inc  ui_ground_hud.inc  ui_ground_hud_buttonbar.inc  ui_ground_hud_buttonbar_skinned.inc  ui_messagebox.inc  ui_options.inc  ui_pda.inc  ui_pda_decoratorspawn.inc  ui_root_npceditor.ui  ui_scripted.inc  ui_scripted_videoplayer.inc  ui_scripted_videoplayer_volume.inc  ui_skill.inc  ui_terraforming.inc
src/engine/client/application/MayaModern/: CMakeLists.txt  README.md  build-mayamodern.ps1  configure.ps1  how-to.md  main.cpp  todo.txt
src/engine/client/application/MayaModern/clientGraphics/: Graphics.h  HardwareIndexBuffer.cpp  HardwareIndexBuffer.h  Material.cpp  Material.h  Shader.cpp  Shader.h  ShaderPrimitive.cpp  ShaderPrimitive.h  ShaderTemplate.cpp  ShaderTemplate.h  ShaderTemplateList.cpp  ShaderTemplateList.h  StaticIndexBuffer.cpp  StaticIndexBuffer.h  StaticShader.cpp  StaticShader.h  StaticShaderTemplate.cpp  StaticShaderTemplate.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferDescriptor.h  VertexBufferFormat.cpp  VertexBufferFormat.h  VertexBufferIterator.cpp  VertexBufferIterator.h
src/engine/client/application/MayaModern/clientSkeletalAnimation/: MeshConstructionHelper.cpp  MeshConstructionHelper.h  OcclusionZoneSet.cpp  OcclusionZoneSet.h
src/engine/client/application/MayaModern/commands/: AddPobPortal.cpp  AddPobPortal.h  CreatePobTemplate.cpp  CreatePobTemplate.h  DdsToTgaConverter.cpp  DdsToTgaConverter.h  ExportPob.cpp  ExportPob.h  ExportSat.cpp  ExportSat.h  ExportShader.cpp  ExportShader.h  ExportSkeleton.cpp  ExportSkeleton.h  ExportStaticMesh.cpp  ExportStaticMesh.h  GetDataRootDirCommand.cpp  GetDataRootDirCommand.h  ImportAnimation.cpp  ImportAnimation.h  ImportLodMesh.cpp  ImportLodMesh.h  ImportPathResolver.cpp  ImportPathResolver.h  ImportPob.cpp  ImportPob.h  ImportSat.cpp  ImportSat.h  ImportShader.cpp  ImportShader.h  ImportSkeletalMesh.cpp  ImportSkeletalMesh.h  ImportSkeleton.cpp  ImportSkeleton.h  ImportStaticMesh.cpp  ImportStaticMesh.h  ImportStructure.cpp  ImportStructure.h  MayaSceneBuilder.cpp  MayaSceneBuilder.h  (+46 more)
src/engine/client/application/MayaModern/docs/: ANS_FORMAT_ANALYSIS.md  README.md  SwgMayaEditor-Manual.md  ans-format.md  guide.md  how-to.md  manual.md  todo.txt
src/engine/client/application/MayaModern/scripts/: pobSingleCellPreset.mel  swgKeepFrameZeroKeys.mel  swgLightsaberToolkit.mel  swgMshExportOptions.mel  swgSplitMeshFourQuadrants.py  swgStatueize.mel  swgVehicleToolkit.mel
src/engine/client/application/MayaModern/sharedCollision/: BarrierObject.cpp  CollisionDetect.cpp  CollisionWorld.cpp  CollisionWorld.h  FloorMesh.cpp  FloorTri.cpp  FloorTri.h  Intersect2d.cpp  Intersect3d.cpp  Overlap2d.cpp
src/engine/client/application/MayaModern/sharedFile/: AbstractFile.cpp  AbstractFile.h  Iff.cpp  Iff.h  OsFile.cpp  OsFile.h  StdioFile.cpp  StdioFile.h
src/engine/client/application/MayaModern/sharedFoundation/: ConfigFile.cpp  ConfigFile.h  Crc.cpp  Crc.h  CrcLowerString.cpp  CrcLowerString.h  CrcString.cpp  CrcString.h  FormattedString.h  Globals.h  LessPointerComparator.h  Misc.h  Os.cpp  Os.h  PersistentCrcString.cpp  PersistentCrcString.h  PointerDeleter.h  StringCompare.h  Tag.h  TemporaryCrcString.cpp  TemporaryCrcString.h
src/engine/client/application/MayaModern/sharedMath/: CompressedQuaternion.cpp  CompressedQuaternion.h  FloatMath.h  PackedArgb.cpp  PackedArgb.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h  VectorArgb.cpp  VectorArgb.h
src/engine/client/application/MayaModern/third/: backward.hpp  loguru.cpp  loguru.hpp
src/engine/client/application/MayaModern/translators/: LsbAttributes.cpp  LsbAttributes.h  SwgIffFormatVersions.h  SwgTranslatorNames.h  ans.cpp  ans.h  dds.cpp  dds.h  flr.cpp  flr.h  lmg.cpp  lmg.h  lod.cpp  lod.h  lsb.cpp  lsb.h  mgn.cpp  mgn.h  msh.cpp  msh.h  pob.cpp  pob.h  sat.cpp  sat.h  skt.cpp  skt.h
src/engine/client/application/MayaModern/unicode/: CMakeLists.txt  FirstUnicode.h  Unicode.h  UnicodeCharacterData.h  UnicodeCharacterDataMap.cpp  UnicodeUtils.h  utf8.cpp
src/engine/client/application/MayaModern/utility/: MayaCompoundString.cpp  MayaCompoundString.h  MayaConversions.cpp  MayaConversions.h  MayaUtility.cpp  MayaUtility.h
src/engine/client/application/TerrainEditor/: README.md
src/engine/shared/application/AcmBuildTool/: CMakeLists.txt
src/engine/shared/application/Jawa/: .gitignore  CMakeLists.txt  build.bat  build.sh
src/engine/shared/application/Jawa/src/shared/: Jawa.cpp  Jawa.h  JawaConfig.h.in  main.cpp
src/engine/shared/application/Kaadu/: CMakeLists.txt  CONFIG_OPTIONS.md  build.bat  cmake_build.sh  run_example.bat  run_example.sh
src/engine/shared/application/Kaadu/src/shared/: AcmBuildConfig.h.in  FirstKaadu.h  Kaadu.cpp  Kaadu.h  main.cpp
tools/: PERL_FILES_STATUS.md  PERL_PATCH_INSTRUCTIONS.txt  buildACM.bat  buildACM.pl  buildACM_README.md  buildACM_SUMMARY.md  buildACM_new.pl  buildAssetCustomizationManagerData.pl  collectAcmTemplatesOnly.pl  collectAssetCustomizationInfo.pl  printCustomizationVariables.pl  updateCustomizationData.pl
tools/perllib/: CollectAcmInfo.pm  CustomizationVariableCollector.pm  Iff.pm  TreeFile.pm  VehicleCustomizationVariableGenerator.pm
tools/swg_blender_addon/: __init__.py
tools/swg_blender_addon/core/: __init__.py  iff.py  registry.py  tag.py  types.py
tools/swg_blender_addon/formats/: __init__.py  ans.py  mgn.py  msh.py  skt.py
tools/swg_blender_addon/operators/: __init__.py  export_msh.py  export_skt.py  import_ans.py  import_iff.py  import_mgn.py  import_msh.py  import_skt.py  inspect_iff.py
tools/swg_blender_addon/panels/: __init__.py
tools/swg_blender_addon/preferences/: __init__.py
(+173 files in other folders)
